# Checkers_Allegro

./: .gitignore  CMakeLists.txt  README.md
Main/: CMakeLists.txt
Main/allegro/include/allegro5/platform/: albcc32.h  almngw32.h
Main/assets/: board.txt
Main/assets/Roboto_Mono/: README.txt
Main/include/: boardSetup.h  globals.h  main.h  threadManager.h  types.h
Main/include/gameEngine/: gameEngine.h  gameEngineUtil.h  moveValidator.h  playerMove.h
Main/include/input/: consoleInputParser.h
Main/include/moves/: move.h  moveUtil.h
Main/include/moves/captures/: capture.h  captureUtil.h  pawnCapture.h  queenCapture.h
Main/include/moves/moves/: pawnMove.h  queenMove.h
Main/include/ui/: UIConstants.h  boardPainter.h  eventHandler.h  uiInitializer.h  uiState.h
Main/include/ui/display/: UIConstants.h  boardPainter.h
Main/include/ui/display/animations/: moveAnimation.h
Main/include/ui/events/: eventHandler.h  eventHandlerUtil.h
Main/src/: boardSetup.c  main.c  threadManager.c
Main/src/gameEngine/: gameEngine.c  gameEngineUtil.c  moveValidator.c  playerMove.c
Main/src/input/: consoleInputParser.c
Main/src/moves/: move.c  moveUtil.c
Main/src/moves/captures/: capture.c  captureUtil.c  pawnCapture.c  queenCapture.c
Main/src/moves/moves/: pawnMove.c  queenMove.c
Main/src/ui/: boardPainter.c  eventHandler.c  eventHandlerUtil.c  uiInitializer.c
Main/src/ui/display/: boardPainter.c
Main/src/ui/display/animations/: moveAnimation.c
Main/src/ui/events/: eventHandler.c  eventHandlerUtil.c
Test/: CMakeLists.txt  pawnCaptureTest.c  pawnCaptureTest.h  queenCaptureTest.c  queenCaptureTest.h  testMain.c
Test/include/: gameEngineTest.h  pawnCaptureTest.h  pawnMoveTest.h  queenCaptureTest.h  queenMoveTest.h  testUtil.h
Test/src/: gameEngineTest.c  pawnCaptureTest.c  pawnMoveTest.c  queenCaptureTest.c  queenMoveTest.c  testUtil.c
Test/testAssets/: 2pawns4CaptureMovesWIth2CapturesEachTestBoard.txt  pawn2CaptureMovesWIth2CapturesEachTestBoard.txt  queen2CaptureMovesWIth2CapturesEachTestBoard.txt  queenSingleCaptureMultipleCaptureMovesTestBoard.txt
include/: header.h  warcaby.h
src/: main.cpp  warcaby.cpp
